@@ -54,6 +54,15 @@
 [/advanced_preference]
 
 [game_config]
+	[server]
+		name=_"Official Wesnoth Server"
+		address=devsrv.wesnoth.org:14999
+	[/server]
+	[server]
+		name=_"Alternate Wesnoth Server"
+		address=games.tuxfamily.org:14999
+	[/server]
+
 	base_income=2
 	village_income=1
 	poison_amount=8
